Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111975

QVideoFrame::toImage has a memory leak at 3840 * 2160 resolution

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5
    • 6.4.3, 6.5.2
    • Multimedia
    • None
    • Windows
    • 60bf900d5 (dev), b8fc89ad8 (6.6), 470c9da93 (6.5)

      QVideoFrame::toImage has a memory leak at 3840 * 2160 resolution

       Normal at 1080p resolution

        1. 20230316-234959.jpg
          20230316-234959.jpg
          76 kB
        2. leak.jpeg
          leak.jpeg
          235 kB
        3. untitled7.zip
          3 kB
        For Gerrit Dashboard: QTBUG-111975
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            dipper Wang Delphi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes