Fix QVideoFrame::toImage thread-safety

* toImage is const and it's expected to be thread-safe
* since video frames are often emitted from separate threads,
  there might be collisions with 2 images created in parallel.
* Even though QImage assignment is thread safe, let's avoid
  possible parallel rendering to different images.

Task-number: QTBUG-111975
Change-Id: Ib26982e3a1df888dbf70c3c0ff73392d4dc81c80
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 60bf900d56cec69057677fa6069c5a96220c6d97)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>